[package]
name = "kedis-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kedis-server"
path = "src/bin/server.rs"


[dependencies]
bytes = "1"
tokio = { version = "1", features = ["full"] }
structopt = "0.3.14"
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.3.17"
regex = "1.9.5"
